--- a/1992.html
+++ b/1992.html
@@ -62,13 +62,13 @@ a:active {
 
 <body style="background-color:#FFFFFF">
         <div class="video-container">
-    <iframe class="responsive-iframe" src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe class="responsive-iframe" src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i"></iframe>
         </div>
 <br>
 <br>
 <br>
         <div class="video-container">
-    <iframe class="responsive-iframe" src="https://www.youtube.com/embed/L27FW2cFWcg?si=Fq-afVdjXr869w6m" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+    <iframe class="responsive-iframe" src="https://www.youtube.com/embed/L27FW2cFWcg?si=Fq-afVdjXr869w6m"></iframe>
         </div>
 <br>
 <br>
