--- a/1992.html
+++ b/1992.html
@@ -61,16 +61,8 @@ a:active {
 </head>
 
 <body style="background-color:#FFFFFF">
-        <div class="video-container">
+        <div class='video-container'>
     <iframe class="responsive-iframe" src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i"></iframe>
-        </div>
-<br>
-<br>
-<br>
-        <div class="video-container">
     <iframe class="responsive-iframe" src="https://www.youtube.com/embed/L27FW2cFWcg?si=Fq-afVdjXr869w6m"></iframe>
         </div>
-<br>
-<br>
-<br>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
