--- a/1992.html
+++ b/1992.html
@@ -59,8 +59,8 @@ a:active {
 
 <body style="background-color:#FFFFFF">
         <div class='video-container'>
-    <iframe class="responsive-iframe" src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i"></iframe>
+    <iframe width="600" height="338" src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i"></iframe>
             <br>
-    <iframe class="responsive-iframe" src="https://www.youtube.com/embed/L27FW2cFWcg?si=Fq-afVdjXr869w6m"></iframe>
+    <iframe width="600" height="338" src="https://www.youtube.com/embed/L27FW2cFWcg?si=Fq-afVdjXr869w6m"></iframe>
         </div>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
