--- a/1992.html
+++ b/1992.html
@@ -60,6 +60,7 @@ a:active {
 <body style="background-color:#FFFFFF">
         <div class='video-container'>
     <iframe width="600" height="338" src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i"></iframe>
+        </div>
             <br>
     <iframe width="600" height="338" src="https://www.youtube.com/embed/L27FW2cFWcg?si=Fq-afVdjXr869w6m"></iframe>
         </div>
