--- a/1992.html
+++ b/1992.html
@@ -62,6 +62,7 @@ a:active {
     <iframe class="responsive-iframe" width="560" height="315" src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i"></iframe>
         </div>
             <br>
+        <div class='container'>
     <iframe class="responsive-iframe" width="560" height="315" src="https://www.youtube.com/embed/L27FW2cFWcg?si=Fq-afVdjXr869w6m"></iframe>
         </div>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
