--- a/1992.html
+++ b/1992.html
@@ -59,10 +59,10 @@ a:active {
 
 <body style="background-color:#FFFFFF">
         <div class='container'>
-    <iframe class="responsive-iframe" width="560" height="315" src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i"></iframe>
+    <iframe class="responsive-iframe" src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i"></iframe>
         </div>
             <br>
         <div class='container'>
-    <iframe class="responsive-iframe" width="560" height="315" src="https://www.youtube.com/embed/L27FW2cFWcg?si=Fq-afVdjXr869w6m"></iframe>
+    <iframe class="responsive-iframe" src="https://www.youtube.com/embed/L27FW2cFWcg?si=Fq-afVdjXr869w6m"></iframe>
         </div>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
