--- a/1992.html
+++ b/1992.html
@@ -58,7 +58,7 @@ a:active {
 
 <body style="background-color:#FFFFFF">
         <div class='container'>
-    <iframe class="responsive-iframe" src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i"></iframe>
+    <iframe class="responsive-iframe" width:100% height:100% src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i"></iframe>
         </div>
             <br>
         <div class='container'>
