--- a/1992.html
+++ b/1992.html
@@ -57,8 +57,8 @@ a:active {
 </head>
 
 <body style="background-color:#FFFFFF">
-        <div class='container'>
-    <iframe class="responsive-iframe" width:100% height:100% src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i"></iframe>
+        <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width:100%>
+    <iframe id="responsive-iframe" width:100% height:100% src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i"></iframe>
         </div>
             <br>
         <div class='container'>
