--- a/1992.html
+++ b/1992.html
@@ -44,24 +44,20 @@ a:active {
 }
 
 .responsive-iframe {
-    position: relative;
+    position: absolute;
     top:0;
     left: 0;
-    bottom: 0; 
-    right: 0; 
-    width: 100%;
-    height: 100%;
 }
 
 </style>
 </head>
 
 <body style="background-color:#FFFFFF">
-        <div class="container" style="padding-bottom:56.25%; position:relative; display:block; width:100%>
+        <div class="container">
     <iframe id="responsive-iframe" width:100% height:100% src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i"></iframe>
         </div>
             <br>
         <div class='container'>
-    <iframe class="responsive-iframe" src="https://www.youtube.com/embed/L27FW2cFWcg?si=Fq-afVdjXr869w6m"></iframe>
+    <iframe class="responsive-iframe" width:100% height:100% src="https://www.youtube.com/embed/L27FW2cFWcg?si=Fq-afVdjXr869w6m"></iframe>
         </div>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
