--- a/2023.html
+++ b/2023.html
@@ -49,11 +49,9 @@ a:active {
 </head>
 
 <body style="background-color:#FFFFFF">
-<div style="padding:55px;">
-<iframe width:100% height:100% src="https://www.youtube.com/embed/-kTtg-2_024?si=8mdZE4f87cetPShL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe><br>
+<div class="container">
+<iframe id="responsive-iframe" width:100% height:100% src="https://www.youtube.com/embed/-kTtg-2_024?si=8mdZE4f87cetPShL"></iframe><br>
   <br>
-  <br>
-  <br>
-<iframe width:100% height:100% src="https://www.youtube.com/embed/4L8NxfffLsY?si=4XQY6OCtxzUXW68Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<iframe id="responsive-iframe" width:100% height:100% src="https://www.youtube.com/embed/4L8NxfffLsY?si=4XQY6OCtxzUXW68Y"></iframe>
   </div>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
