--- a/1992.html
+++ b/1992.html
@@ -54,7 +54,7 @@ a:active {
 
 <body style="background-color:#FFFFFF">
         <div class="container">
-    <iframe id="responsive-iframe" width:100% height:100% src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i"></iframe>
+    <iframe id="responsive-iframe" width:100% height:100% src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i" frameborder=0; ></iframe>
         </div>
             <br>
         <div class='container'>
