--- a/1992.html
+++ b/1992.html
@@ -54,10 +54,10 @@ a:active {
 
 <body style="background-color:#FFFFFF">
         <div class="container">
-    <iframe id="responsive-iframe" width:100% height:100% src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i" frameborder=0; ></iframe>
+    <iframe id="responsive-iframe" width:100% height:100% src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i" frameborder="0" ></iframe>
         </div>
             <br>
         <div class='container'>
-    <iframe class="responsive-iframe" width:100% height:100% src="https://www.youtube.com/embed/L27FW2cFWcg?si=Fq-afVdjXr869w6m"></iframe>
+    <iframe class="responsive-iframe" width:100% height:100% src="https://www.youtube.com/embed/L27FW2cFWcg?si=Fq-afVdjXr869w6m" frameborder="0"></iframe>
         </div>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
