--- a/1992.html
+++ b/1992.html
@@ -38,26 +38,18 @@ a:active {
   top: 60%;
 }
 
-.container {
+.iframe-container {
     position: relative;
-    width: 100%; 
+    overflow: hidden;
+    padding-top: 56.25%;
 }
 
-.responsive-iframe {
-    position: absolute;
-    top:55;
-    left: 55;
-}
 
 </style>
 </head>
 
 <body style="background-color:#FFFFFF">
-        <div class="container">
-    <iframe id="responsive-iframe" width:100% height:100% src="https://www.youtube.com/embed/rOaHgMSZX0o?si=nKXgAbDoPORptN8i" frameborder="0" ></iframe>
-        </div>
+<div class="iframe-container"><iframe border="0" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" src="https://www.youtube.com/watch?v=rOaHgMSZX0o"></iframe></div>
             <br>
-        <div class='container'>
-    <iframe class="responsive-iframe" width:100% height:100% src="https://www.youtube.com/embed/L27FW2cFWcg?si=Fq-afVdjXr869w6m" frameborder="0"></iframe>
-        </div>
+<div class="iframe-container"><iframe border="0" loading="lazy" src="https://www.youtube.com/embed/L27FW2cFWcg?si=Fq-afVdjXr869w6m"></iframe></div>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
