--- a/1992.html
+++ b/1992.html
@@ -51,5 +51,5 @@ a:active {
 <body style="background-color:#FFFFFF">
 <div class="iframe-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/rOaHgMSZX0o?si=WcDyVkTwuUpHa5xa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
             <br>
-<div class="iframe-container"><iframe border="0" loading="lazy" src="https://www.youtube.com/embed/L27FW2cFWcg?si=Fq-afVdjXr869w6m"></iframe></div>
+<div class="iframe-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/L27FW2cFWcg?si=xAsfGTKecS5zOkgh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
   <button class='backBtn' onclick="history.back(-1)">< Back </button>
