--- a/1992.html
+++ b/1992.html
@@ -41,7 +41,8 @@ a:active {
 .iframe-container {
     position: relative;
     overflow: hidden;
-    padding-top: 56.25%;
+    padding-top: 0;
+    padding-left: 55; 
 }
 
 
