--- a/1992.html
+++ b/1992.html
@@ -45,6 +45,11 @@ a:active {
     padding-left: 55; 
 }
 
+@media only screen and (max-device-width: 430px) {
+ iframe {
+   width: 375px;
+
+
 
 </style>
 </head>
