--- a/2023.html
+++ b/2023.html
@@ -51,7 +51,7 @@ a:active {
 </head>
 
 <body style="background-color:#FFFFFF">
-<div class="iframe-container"><iframe border="0" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" src="https://www.youtube.com/embed/-kTtg-2_024?si=8mdZE4f87cetPShL"></iframe></div>
-<div class="iframe-container"><iframe border="0" loading="lazy" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" src="https://www.youtube.com/embed/4L8NxfffLsY?si=4XQY6OCtxzUXW68Y"></iframe></div>  
+<div class="iframe-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/-kTtg-2_024?si=GYbSjBTQqIhQkvHU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+<div class="iframe-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/4L8NxfffLsY?si=o0U7p7q7XMZ60biB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>  
     
     <button class='backBtn' onclick="history.back(-1)">< Back </button>
