--- a/1992.html
+++ b/1992.html
@@ -42,7 +42,7 @@ a:active {
     position: relative;
     overflow: hidden;
     padding-top: 0;
-    padding-left: 55; 
+    padding-left: 55px; 
 }
 
 @media only screen and (max-device-width: 430px) {
