--- a/2023.html
+++ b/2023.html
@@ -39,8 +39,9 @@ a:active {
 .iframe-container {
     position: relative;
     overflow: hidden;
-    padding-top: 0;
-    padding-left: 55; 
+    padding-top: 0px;
+    padding-left: 10px;
+    padding-right: 10px; 
 }
 
 @media only screen and (max-device-width: 430px) {
