--- a/1992.html
+++ b/1992.html
@@ -41,7 +41,7 @@ a:active {
 .iframe-container {
     position: relative;
     overflow: hidden;
-    padding-top: 0;
+    padding-top: 10px;
     padding-left: 10px; 
     padding-right: 10px; 
 }
