--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@
             display: none;
             color: red;
         }
+@media only screen and (max-device-width: 430px) {
+	        #contentFrame {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 90%;
+            height: 90%;
+
+
     </style>
   </head>
   <body>
