--- a/1992.html
+++ b/1992.html
@@ -49,6 +49,9 @@ a:active {
 @media only screen and (max-device-width: 430px) {
  iframe {
    width: 375px;
+   padding-left: 0px; 
+   padding-right: 0px; 
+ }
 
 
 
